data/all_generated_tests/raw_wast_tests/block_EdgeCaseFailuresinbr_table_47.wast
;; 8. **Test Description**: Set up a scenario where a `br_table` in a `block` is given an index, which is invalid as per the dynamic operand stack configurations. This validates the error handling for dynamic stack misconfigurations.    - **Constraint Checked**: Conformance with the operand stack requirements under dynamic configurations.

(assert_invalid
  (module
    (func $br_table_invalid_index (result i32)
      (block (result i32)
        (i32.const 1)
        (block (result i32)
          (i32.const 0)
          (br_table 1 1 (local.get 0))
        )
      )
    )
  )
  "type mismatch"
)